--- a/portfolio.html
+++ b/portfolio.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="uk">
 
 <head>
     <meta charset="UTF-8">
@@ -60,7 +60,7 @@
                     <li class="posters-li">
                         <a href="" class="servis-posters link">
                             <div class="subtext-div"><img src="./img/website.jpg" width="370" height="294"
-                                    alt="ноутбук">
+                                    alt="фото ноутбука">
                                 <p class="subtext">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та
                                     сервісів. Все це дозволить
                                     відвідувачу отримати
@@ -78,7 +78,7 @@
                     </li>
                     <li class="posters-li">
                         <a href="" class="servis-posters link">
-                            <div class="subtext-div"><img src="./img/design.jpg" width="370" height="294" alt="дизайн">
+                            <div class="subtext-div"><img src="./img/design.jpg" width="370" height="294" alt="фото баскетболістів">
                                 <p class="subtext">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та
                                     сервісів. Все це дозволить
                                     відвідувачу отримати
@@ -97,7 +97,7 @@
                     <li class="posters-li">
                         <a href="" class="servis-posters link">
                             <div class="subtext-div"><img src="./img/addition.jpg" width="370" height="294"
-                                    alt="логотип">
+                                    alt="лого ресторана морської кухні">
                                 <p class="subtext">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та
                                     сервісів. Все це дозволить
                                     відвідувачу отримати
@@ -116,7 +116,7 @@
                     <li class="posters-li">
                         <a href="" class="servis-posters link">
                             <div class="subtext-div"><img src="./img/marketing.jpg" width="370" height="294"
-                                    alt="навушники">
+                                    alt="фото навушників">
                                 <p class="subtext">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та
                                     сервісів. Все це дозволить
                                     відвідувачу отримати
@@ -135,7 +135,7 @@
                     <li class="posters-li">
                         <a href="" class="servis-posters link">
                             <div class="subtext-div"><img src="./img/website2.jpg" width="370" height="294"
-                                    alt="коробки">
+                                    alt="зображення з двома коробками">
                                 <p class="subtext">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та
                                     сервісів. Все це дозволить
                                     відвідувачу отримати
@@ -155,7 +155,7 @@
                     <li class="posters-li">
                         <a href="" class="servis-posters link">
                             <div class="subtext-div"><img src="./img/addition2.jpg" width="370" height="294"
-                                    alt="монітор">
+                                    alt="фото монітора">
                                 <p class="subtext">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та
                                     сервісів. Все це дозволить
                                     відвідувачу отримати
@@ -173,7 +173,7 @@
                     </li>
                     <li class="posters-li">
                         <a href="" class="servis-posters link">
-                            <div class="subtext-div"><img src="./img/design2.jpg" width="370" height="294" alt="книга">
+                            <div class="subtext-div"><img src="./img/design2.jpg" width="370" height="294" alt="зображення з журналом">
                                 <p class="subtext">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та
                                     сервісів. Все це дозволить
                                     відвідувачу отримати
@@ -192,7 +192,7 @@
                     <li class="posters-li">
                         <a href="" class="servis-posters link">
                             <div class="subtext-div"><img src="./img/marketing2.jpg" width="370" height="294"
-                                    alt="етикетка">
+                                    alt="зображення з етикеткою">
                                 <p class="subtext">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та
                                     сервісів. Все це
                                     дозволить
@@ -212,7 +212,7 @@
                     <li class="posters-li">
                         <a href="" class="servis-posters link">
                             <div class="subtext-div"><img src="./img/addition3.jpg" width="370" height="294"
-                                    alt="ноутбук">
+                                    alt="людина працює за ноотбуком">
                                 <p class="subtext">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та
                                     сервісів. Все це дозволить
                                     відвідувачу отримати
