--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
             <div class="conteiner">
                 <h2 class="team-ourtim">Наша команда</h2>
                 <ul class="team-list list">
-                    <li class="team-background"><img src="./img/igor.jpg" width="270" height="260" alt="Ігор"
+                    <li class="team-background"><img src="./img/igor.jpg" width="270" height="260" alt="фото продуктового дизайнера"
                             class="team-img">
                         <div class="team-list-information">
                             <h3 class="team-iformation">Ігор Дем'яненко</h3>
@@ -137,7 +137,7 @@
                             </ul>
                         </div>
                     </li>
-                    <li class="team-background"><img src="./img/olga.jpg" width="270" height="260" alt="Ольга"
+                    <li class="team-background"><img src="./img/olga.jpg" width="270" height="260" alt="фото фронтенд рорзробника"
                             class="team-img">
                         <div class="team-list-information">
                             <h3 class="team-iformation">Ольга Рєпіна</h3>
@@ -162,7 +162,7 @@
                             </ul>
                         </div>
                     </li>
-                    <li class="team-background"><img src="./img/nikolay.jpg" width="270" height="260" alt="Микола"
+                    <li class="team-background"><img src="./img/nikolay.jpg" width="270" height="260" alt="фото маркетолога"
                             class="team-img">
                         <div class="team-list-information">
                             <h3 class="team-iformation">Микола Тарасов</h3>
@@ -187,7 +187,7 @@
                             </ul>
                         </div>
                     </li>
-                    <li class="team-background"><img src="./img/myhaylo.jpg" width="270" height="260" alt="Михайло"
+                    <li class="team-background"><img src="./img/myhaylo.jpg" width="270" height="260" alt="фото дизайнера інтерфейса"
                             class="team-img">
                         <div class="team-list-information">
                             <h3 class="team-iformation">Михайло Єрмаков</h3>
